--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162450230-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-162450230-1');
+  </script>
+
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <title>Covid-19 Status</title>
 </head>
